--- a/css/bubble.css
+++ b/css/bubble.css
@@ -41,8 +41,39 @@ body {
 }
 
 #vis {
-    width: 900px;
-    height: 600px;
+    width: 700px;
+    height: 700px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.footer {
+    width: 100%;
+    padding: 3rem 3rem;
+    color: #093068;
+}
+
+.key {
+    position: fixed;
+    left: 3rem;
+    bottom: 3rem;
+}
+
+.key-element {
+    float: left;
+    width: 3rem;
+}
+
+.key-color {
+    width: 2rem;
+    height: 2rem;
+    padding: 0.5rem;
+}
+
+.key-number {
+    width: 100%;
+    text-align: center;
+    height: 2rem;
+    line-height: 2rem;
+    font-size: 1rem;
 }
