--- a/assets/css/bubble.css
+++ b/assets/css/bubble.css
@@ -1,15 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Actor&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 html {
     font-size: 12px;
     font-family: Roboto;
 }
 
-body {
+body, .container {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
+}
+
+.container {
+    display: flex;
+    flex-flow: column;
+    overflow: hidden;
 }
 
 .header {
@@ -41,22 +48,23 @@ body {
 }
 
 #vis {
-    width: 700px;
-    height: 700px;
+    width:  min(700px, 100%);
     margin-left: auto;
     margin-right: auto;
-}
-
-.footer {
-    width: 100%;
-    padding: 3rem 3rem;
-    color: #093068;
+    flex-grow : 1;
 }
 
 .key {
     position: fixed;
     left: 3rem;
     bottom: 3rem;
+}
+
+.key-label {
+    height: 3rem;
+    font-size: 1rem;
+    line-height: 3rem;
+    text-align: center;
 }
 
 .key-element {
