--- a/assets/css/bubble.css
+++ b/assets/css/bubble.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Actor&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 html {
     font-size: 12px;
     font-family: Roboto;
@@ -29,6 +33,28 @@ body, .container {
 .title {
     font-size: 3.5rem;
     line-height: 7rem;
+    color: inherit;
+    text-decoration: none;
+}
+
+.profile {
+    float: right;
+    margin: 2rem 0rem;
+}
+
+.profile-name {
+    margin-left: 0.5rem;
+    font-size: 1.5rem;
+    line-height: 3rem;
+    vertical-align: middle;
+}
+
+.profile-img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 1.5rem;
+    object-fit: cover;
+    vertical-align: middle;
 }
 
 .tagline {
@@ -39,8 +65,11 @@ body, .container {
     text-align: center;
 }
 
+.bubble {
+    cursor: pointer;
+}
+
 .bubbleTitle {
-    fill: white;
     font-size: 1.5rem;
     font-family: Roboto;
     text-anchor: middle;
@@ -57,31 +86,57 @@ body, .container {
 .key {
     position: fixed;
     left: 3rem;
-    bottom: 3rem;
+    bottom: 1rem;
 }
 
-.key-label {
+.key-label, .key-info {
     height: 3rem;
     font-size: 1rem;
     line-height: 3rem;
     text-align: center;
 }
 
+.key-info {
+    font-style: italic;
+}
+
+.key-content {
+    height: 6rem;
+}
+
 .key-element {
     float: left;
     width: 3rem;
+    height: 6rem;
 }
 
 .key-color {
-    width: 2rem;
-    height: 2rem;
-    padding: 0.5rem;
+    width: 3rem;
+    height: 3rem;
+    /* padding: 0.5rem; */
 }
 
 .key-number {
     width: 100%;
     text-align: center;
-    height: 2rem;
-    line-height: 2rem;
+    height: 3rem;
+    line-height: 3rem;
     font-size: 1rem;
+}
+
+.add-topic {
+    font-size: 1.5rem;
+    font-family: inherit;
+    border: 0;
+    cursor: pointer;
+
+    color: white;
+    background: linear-gradient(92.68deg, #7CB8F7 0%, #2A8BF2 100%);
+    box-shadow: 0.5rem 0.5rem 2rem rgba(42, 139, 242, 0.15), 0.5rem 0.5rem 2rem rgba(42, 139, 242, 0.05), 1rem 0.5rem 2rem rgba(42, 139, 242, 0.15);
+    border-radius: 0.5rem;
+
+    position: fixed;
+    right: 3rem;
+    bottom: 2rem;
+    padding: 1rem 2rem;
 }
