--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,39 +1,42 @@
+html {
+  font-size: 12px;
+}
+
 body {
   margin: 0;
   overflow: hidden;
 }
 
-.header{
-  position: absolute;
-  width: 365px;
-  height: 61px;
-  left: 35px;
-  top: 20px;
-
-  font-family: 'Actor';
-  font-style: normal;
-  font-weight: bold;
-  font-size: 35px;
-  line-height: 54px;
-  display: flex;
-  align-items: center;
-
+.header {
+  width: 100%;
+  padding: 0rem 3rem;
   color: #093068;
+  font-family: 'Actor';
+}
+
+.header > a {
+  font-size: 3.5rem;
+  line-height: 7rem;
+  color: inherit;
+  text-decoration: none;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
 
 .graphic {
-  position: absolute;
-  left: 150px;
-  top: 115px;
+  padding: 3rem;
+}
+
+.graphic > img {
+  display: block;
+  margin: 3rem auto;
 }
 
 .desc {
-  position: absolute;
-  width: 426px;
-  height: 171px;
-  left: 160px;
-  top: 485px;
-
+  padding: 0px 4rem;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: normal;
@@ -42,94 +45,75 @@ body {
   display: flex;
   align-items: center;
   text-align: center;
-
   color: #093068;
 }
 
-span {
+.desc span {
   font-weight: bold;
 }
 
-.login_title {
-  position: absolute;
-  width: 450px;
-  height: 51px;
-  left: 833px;
-  top: 140px;
+.login-column {
+  padding: 6rem 15rem;
+}
 
+.login_title {
+  width: 100%;
+  height: 4rem;
   font-family: 'Actor';
   font-style: normal;
   font-weight: bold;
-  font-size: 35px;
-  line-height: 42px;
-  align-items: center;
+  font-size: 3rem;
+  line-height: 4rem;
+  /* align-items: center; */
   text-align: center;
-
   color: #2A8BF2;
 }
 
 .uni_title {
-  position: absolute;
-  width: 61px;
+  /* width: 61px; */
   height: 26px;
-  left: 870px;
-  top: 220px;
-
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
-
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.01em;
-  text-transform: capitalize;
-
+  /* align-items: center; */
+  /* text-align: left; */
+  /* letter-spacing: 0.01em; */
+  /* text-transform: capitalize; */
   color: #093068;
+  margin-top: 1rem;
 }
 
 .uni_input {
-  position: absolute;
-  width: 357px;
+  width: 100%;
   height: 40px;
-  left: 885px;
-  top: 250px;
-
   background: #F0F0F0;
   border: 2px solid #979797;
   box-sizing: border-box;
   border-radius: 8px;
+  /* margin-top: 0.5rem; */
 }
 
 .pass_title {
-  position: absolute;
-  width: 61px;
+  /* width: 100%; */
   height: 26px;
-  left: 887px;
-  top: 320px;
-
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
-
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.01em;
-  text-transform: capitalize;
-
+  /* align-items: center; */
+  /* text-align: center; */
+  /* letter-spacing: 0.01em; */
+  /* text-transform: capitalize; */
   color: #093068;
+  margin-top: 1rem;
 }
 
 .pass_input {
-  position: absolute;
-  width: 357px;
+  width: 100%;
   height: 40px;
-  left: 885px;
-  top: 350px;
-
   background: #F0F0F0;
   border: 2px solid #979797;
   box-sizing: border-box;
@@ -137,17 +121,12 @@ span {
 }
 
 .login {
-  position: absolute;
-  width: 357px;
+  width: 100%;
   height: 60px;
-  left: 885px;
-  top: 440px;
-
   background: linear-gradient(92.68deg, #7CB8F7 0%, #2A8BF2 100%);
   box-shadow: 6px 6px 25px rgba(42, 139, 242, 0.15), 4px 4px 25px rgba(42, 139, 242, 0.05), 10px 6px 25px rgba(42, 139, 242, 0.15);
   border-radius: 6px;
   border: 1px solid #7CB8F7;
-
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
@@ -157,46 +136,45 @@ span {
   text-align: center;
   text-transform: capitalize;
   color: #FFFFFF;
+  cursor: pointer;
+  display: block;
+  margin-top: 3rem;
 }
 
 .sign_up {
-  position: absolute;
-  width: 357px;
+  width: 100%;
   height: 60px;
-  left: 885px;
-  top: 523px;
-
   background: linear-gradient(92.68deg, #7A8795 0%, #81868B 100%);
   box-shadow: 6px 6px 25px rgba(42, 139, 242, 0.15), 4px 4px 25px rgba(42, 139, 242, 0.05), 10px 6px 25px rgba(42, 139, 242, 0.15);
   border-radius: 6px;
   border: 1px solid #7A8795;
-
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
   line-height: 27px;
-  align-items: center;
+  /* align-items: center; */
   text-align: center;
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   color: #FFFFFF;
+  cursor: pointer;
+  margin-top: 1rem;
 }
 
 .footer {
-  position: absolute;
-  width: 500px;
+  width: 100%;
   height: 35px;
-  left: 630px;
-  top: 670px;
-
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: normal;
   font-size: 15px;
   line-height: 27px;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   text-align: center;
-
   color: #093068;
+}
+
+.footer > span {
+  margin: 0 auto;
 }
